TASK-450 overflow correction

--- a/client/stylesheets/webpages/stock_disclaimer_page.less
+++ b/client/stylesheets/webpages/stock_disclaimer_page.less
@@ -395,8 +395,8 @@ Associated Files: stock_disclaimer_page_logic.js and stock_disclaimer_page.html
   top: 82px;
   left: 15px;
   float: left;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  //overflow: hidden;
+  //text-overflow: ellipsis;
 }
 /* class name 'parat' has the fontstyle*/
 &-parat{
@@ -404,8 +404,8 @@ Associated Files: stock_disclaimer_page_logic.js and stock_disclaimer_page.html
   color:  #000000;
   font-size: 14px;
   text-align: left;
-  overflow: hidden;
-  text-overflow: ellipsis;
+//  overflow: hidden;
+  //text-overflow: ellipsis;
 }
 /* container for the fotter('ft') */
 &-ft{
